--- a/imageGallery.html
+++ b/imageGallery.html
@@ -6,7 +6,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Orbitron:400,900" rel="stylesheet">
 </head>
 <body>
-<
+<p>George/Higbie</p>
+<hr>
 
 <!-- Massimo Marganoni -->
 <img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg">
